web is now responsive

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <nav>
       <div class="personal__logo">Xori Robinson</div>
       <ul class="nav__link--list">
-        <li>
-          <a href="" class="
+        <li class="nav__link">
+          <a href="#languages" class="
             nav__link--anchor
             link__hover-effect
             link__hover-effect--black
           ">Languages</a>
         </li>
-        <li>
-          <a href="" class="
+        <li class="nav__link">
+          <a href="#prjects" class="
             nav__link--anchor
             link__hover-effect
             link__hover-effect--black
-          ">Project</a>
+          ">Projects</a>
         </li>
-        <li>
-          <a href="" class="
+        <li class="nav__link">
+          <a href="#contact" class="
             nav__link--anchor
             nav__link--anchor-primary
             link__hover-effect
@@ -41,24 +41,24 @@
         <div class="about-me__info--container">
           <figure class="about-me__picture--mask">
             <img src="./assets/me1.jpeg" class="about-me__picture" alt="Picture of me">
-          
-            <span class="laguage__name">HTML</span>
-          <h1 class="about-me__into--title">Hey! I'm <span class="text-purple">Xori Robinson</span>👋</h1>
+          </figure>
+            <span class="language__name">HTML</span>
+          <h1 class="about-me__into--title">Hey! I'm <span class="text-purple">Xori Robinson</span>&nbsp;<span class="wave">👋</span></h1>
           <p class="about-me__info--para">
             I'm a <strong class="text__purple">frontend developer</strong> who enjoys creating responsive websites, 
             bringing value and versatility to any team I join.
           </p>
           <div class="about-me__links">
-            <a href="" class="about-me__link">
+            <a href="https://www.linkedin.com/in/xori-robinson-b3b809291/" class="about-me__link">
               <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="" class="about-me__link">
+            <a href="https://github.com/xori93" class="about-me__link">
               <i class="fa-brands fa-github"></i>
             </a>
-            <a href="" class="about-me__link">
+            <a href="mailto:robinson.xori@gmail.com" class="about-me__link">
               <i class="fa-solid fa-envelope"></i>
             </a>
-            <a href="" class="about-me__link">
+            <a href="./assets/Xori Robinson Resume (1).pdf" target="_blank" class="about-me__link">
               <i class="fa-solid fa-file-pdf"></i>
             </a>
           </div>
@@ -146,21 +146,40 @@
   </section>
 
   <footer>
-    <div class="row">
-      <a href="#">
-        <figure>
+    <div class="row footer__row">
+      <a href="#" class="footer__anchor">
+        <figure class="footer__logo">
           <!-- LOGO GOES HERE -->
-          <img src="" alt="">
+          <img src="./assets/logo.png" class="footer__logo--img" alt="">
         </figure>
+        <span class="footer__logo--popper">
+          Top
+          <i class="fa-solid fa-arrow-up"></i>
+        </span>
       </a>
       <div class="footer__social--list">
-        <a href="" target="_blank" class="
+        <a href="https://github.com/xori93" target="_blank" class="
         footer__social--link
         link__hover-effect
         link__hover-effect--white
-        
-        "></a>
+        ">github</a>
+        <a href="https://www.linkedin.com/in/xori-robinson-b3b809291/" target="_blank" class="
+        footer__social--link
+        link__hover-effect
+        link__hover-effect--white
+        ">Linkedin</a>
+        <a href="mailto:robinson.xori@gmail.com" target="_blank" class="
+        footer__social--link
+        link__hover-effect
+        link__hover-effect--white
+        ">Email</a>
+        <a href="./assets/Xori Robinson Resume (1).pdf" target="_blank" class="
+        footer__social--link
+        link__hover-effect
+        link__hover-effect--white
+        ">Resume</a>
       </div>
+      <div class="footer__copyright">Copyright © 2021 Xori Robinson</div>
     </div>
   </footer>
 </body>
